Increase max perm size when running unit tests.