@@ -180,6 +180,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.2</version>
+				<configuration>
+					<forkMode>once</forkMode>
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+				</configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.gmaven</groupId>
@@ -230,6 +235,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
+				<version>1.3</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
